# epftoolbox2

./: .env.example  .gitignore  README.md  llms.txt  pyproject.toml  pytest.ini  requirements.txt  test_continuity.py
.github/workflows/: deploy-docs.yml  test.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/.astro/: content-modules.mjs  data-store.json  settings.json
docs/src/: content.config.ts
docs/src/styles/: custom.css
epftoolbox2/: __init__.py  logging.py
epftoolbox2/data/: cache_manager.py
epftoolbox2/data/sources/: __init__.py  base.py  calendar.py  csv.py  csv_source.py  entsoe.py  open_meteo.py
epftoolbox2/data/transformers/: __init__.py  base.py  lag.py  resample.py  timezone.py
epftoolbox2/data/validators/: __init__.py  base.py  continuity.py  eda.py  null_check.py  result.py
epftoolbox2/evaluators/: __init__.py  base.py  mae.py
epftoolbox2/exporters/: __init__.py  base.py  excel.py  terminal.py
epftoolbox2/models/: __init__.py  base.py  lasso.py  ols.py
epftoolbox2/pipelines/: __init__.py  data_pipeline.py  model_pipeline.py
epftoolbox2/results/: __init__.py  report.py  store.py
epftoolbox2/scalers/: standard.py
examples/: 01_data_pipeline_only.py  02_model_pipeline_only.py  03_full_workflow.py
tests/: test_evaluation.py
tests/data/: test_cache_manager.py
tests/data/sources/: conftest.py  test_calendar.py  test_csv.py  test_csv_source.py  test_entsoe.py  test_open_meteo.py
tests/data/transformers/: test_transformers.py
tests/models/: test_models.py
tests/pipelines/: test_pipeline.py
tests/results/: test_store.py
tests/scalers/: test_standard.py
(+29 files in other folders)
