[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epftoolbox2"
version = "2.0.0"
description = "Energy Price Forecasting Toolbox 2"
keywords = ["energy", "forecasting", "toolbox", "machine learning", "deep learning"]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=2.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "holidays>=0.40",
    "astral>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["epftoolbox2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: Integration tests requiring API key"]
filterwarnings = ["ignore::bs4.builder.XMLParsedAsHTMLWarning"]
